--- a/app/views/sequences/_form.html.erb
+++ b/app/views/sequences/_form.html.erb
@@ -1,7 +1,8 @@
-<%= form_for @sequence, :url=>sequences_path do |f| %>
+<%= form_for @sequence do |f| %>
 <div class="fields">
 <%= f.label :name %>
 <%= f.text_field :name %>
 </div>
+<%= f.hidden_field :video_id %>
 <%= f.submit %>
 <% end %>
